--- a/src/pages/shop/index.less
+++ b/src/pages/shop/index.less
@@ -1,257 +1,330 @@
-.page{
-    height: 100vh;/*相对单位*/
-    display: flex;
-    flex-direction: column;
-  }
-  .navigeterbar {
-    height: 10vh;
-    display: flex;
-    justify-content: center;
+
+.navigeterbar {
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+ 
+}
+.bar_title {
+  font-size: 36rpx;
+  width: 216rpx;
+  height: 4vh;
+  margin-top: 6vh;
+  color: #000;
+  
+}
+.bar_back {
+  position: absolute;
+  left: 40rpx;
+  top: 7vh;
+  height: 20rpx;
+  width: 20rpx;
+  border-top: 2px solid #000;
+  border-left: 2px solid #000;
+  transform: rotate(-45deg);
+  
+}
+.top{
+  border-bottom: 1px solid #bebcbc;
+  width: 100%;
+  height: 8.5vh;
+  display: flex;
+ 
+}
+.header{
+  display: flex;
+  
+}
+.icon image{
+  width: 3vh;
+  height: 3vh;
+  margin: 10rpx;
+}
+.shopname text{
+  font-size: 36rpx;
+  font-weight: 600;
+}
+.left{
+  width: 80%; 
+}
+.shopname{
+  width: 50%;
+  height: 100%;
+  padding-top: 6rpx;
+  position: relative;
+}
+.left_arrow image{
+  width: 4vh;
+  height: 4vh;
+  margin-left: -20rpx;
+}
+.footer text{
+  color: #969696;
+}
+.footer{
+  margin-left: 14rpx;
+  font-size: 28rpx;
+}
+.container{
+  width: 90%;
+  height: 50%;
+  border:  2rpx solid #adadad;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 45rpx;
+  color: #adadad;
+}
+.right{
+  width: 20%;
+}
+
+.body{
+  width: 100%;
+  /* height: 90vh;0 */
+  display: flex;
+  height: 81.5vh;
+}
+.scroll{
+  height: 81.5vh;
+  width: 20vw;
+}
+.left_bar{
+  /* height: 100%; */
+  width: 20vw;
+  background-color: #f3f6f6;
+  display: flex;
+  flex-direction: column;
+}
+.active{
+  width: 100%;
+  height: 150rpx;
+  position: relative;
+  border-left: 10rpx solid #f4b859;
+  /* margin-left: 10rpx solid #f4b859; */
+  background-color: #fff;
+  padding-top: 30rpx;
+  color: #f4b859;
+  
+
+}
+.active::before{
+  content: "";
+  color: #f4b859;
+  border-left: 10rpx solid #f4b859;
+  height: 100rpx;
+  position: absolute;
+  top: 30rpx;
+  left: -10rpx;
+}
+.bar {
+  /* background-color: #fff; */
+  width: 100%;
+  height: 120rpx;
+  position: relative;
+  border-left: 10rpx solid #ffffff;
+  padding-top: 30rpx;
+   color: #b3b6b6b6;
    
-  }
-  .bar_title {
-    font-size: 36rpx;
-    width: 144rpx;
-    height: 4vh;
-    margin-top: 6vh;
-    color: #000;
-    
-  }
-  .bar_back {
-    position: absolute;
-    left: 40rpx;
-    top: 7vh;
-    height: 20rpx;
-    width: 20rpx;
-    border-top: 2px solid #000;
-    border-left: 2px solid #000;
-    transform: rotate(-45deg);
-  }
-  .icon image{
-    height: 3vh;
-    width: 3vh;
-  }
-  .shopname{
-    display: flex;
-    align-items: center;
-    flex: 1;
-  }
-  .shopname image{
-    height: 2vh;
-    width: 2vh;
-    margin-left: 10rpx
-  }
-  .icon{
-   align-items: center;
-   display: flex;
-   margin-left: 10rpx;
-   margin-right: 10rpx;
-  }
+ 
+}
+.pic{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
   
+}
+.pic image{
+  height: 3vh;
+  width: 3vh;
+}
+.bar_name{
+  /* height: 20%; */
+  width: 100%;
+  /* left: 25rpx; */
+  /* position: absolute; */
+  /* bottom: 22rpx; */
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rpx;
+}
+.bar_name text{
+  font-size: 26rpx;
+  font-weight: 500;
+
+}
+.hd_swiper{
   
-  #myMap{
-    width: 100%;
-    height: 30vh;
-  }
-  .page_hd{
-    display: flex;
-    justify-content: center;
-    background-color: #fff;
-    width: 100%;
-    height: 10vh;
-    z-index: 2;
-    top: 0;
-  }
-  .search{
-    height: 100%;
-    width: 30vw;
-    /* height: 10vh; */
-  }
-  
-  /* .map-shadow-top{
-    position: absolute;
-    width: 80rpx;
-    height: 50rpx;
-    top: 0;
-    left: 0;
-  } */
-  .page_ft{
-    background-color: #f2f2f2;
-    width: 100%;
-    /* height: 100vh; */
-    /* position: absolute; */
-   
-  }
-  scroll-veiw{
-    height: 110vh;
-    width: 110vw;
-  }
-  .shop{
-    border-radius: 15rpx;
-    display: flex;
-    border: 4rpx solid #ffffff;
-    overflow: hidden;
+    width: 75vw;
     margin: 20rpx;
-    height: 15vh;
-    padding: 25rpx;
-    position: relative;
-    background-color: #fff;
-  }
-  .active{
-    border-radius: 15rpx;
-    display: flex;
-    border: 4rpx solid #e6bb72;
-    overflow: hidden;
-    margin: 20rpx;
-    height: 15vh;
-    padding: 25rpx;
-    position: relative;
-    background-color: #fff;
-  }
-  .page_bd{
-    width: 100%;
-    z-index: 2;
-    position: relative;
-    bottom: 0;
-    
-  }
-  .right{
-    /* background-color: green; */
-    height: 100%;
-    width: 70%;
-  }
-  .left{
-    /* background-color: red; */
-    height: 100%;
-    width: 30%;
-    border-left: 2rpx solid #b9b9b9;
-  }
-  .pic image{
-    width: 3vh;
-    height: 3vh;
-    margin-right: 10rpx;
-  }
-  .top{
-    height: 40%;
-    display: flex;
-  }
-  .shop_name text{
-    font-weight: 700;
-  }
-  .state{
-    margin-top: 8rpx;
-    margin-left: 10rpx;
-    border: 3rpx solid #f9ba54;
-    width: 90rpx;
-    height: 30rpx;
-    border-radius: 5rpx;
-    font-size: 26rpx;
-    color: #f9ba54;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 600;
-  }
-  .center{
-    display: flex;
-  }
-  .center image{
-    width: 2vh;
-    height: 2vh;
-    margin-right: 5rpx;
-  }
-  .center text{
-    color: #929292;
-    font-size: 24rpx;
-    letter-spacing: 1rpx;
-  }
-  .bottom image{
-    width: 2vh;
-    height: 2vh;
-    margin-right: 5rpx;
-  }
-  .bottom text{
-    color: #929292;
-    font-size: 24rpx;
-    letter-spacing: 1rpx;
-  }
-  .bottom{
-    display: flex;
-  }
-  .header{
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    margin-left: 35rpx;
-    color: #f5b654;
-    font-size: 24rpx;
-    letter-spacing: 1rpx;
-  }
-  .body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20rpx 20rpx 20rpx 40rpx;
-    
-  }
-  .leftPic{
-    border-radius: 50%;
-    background-color:#e3e4e4;
-    width: 50rpx;
-    height: 50rpx;
-    /* margin: 20rpx; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top:145rpx;
-    right: 130rpx;
-  }
-  .leftPic image{
-    height: 30rpx;
-    width: 30rpx;
-  
-    
-  }
-  .rightPic{
-    border-radius: 90rpx;
-    background-color:#e3e4e4;
-    width: 50rpx;
-    height: 50rpx;
-    margin: 20rpx;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 125rpx;
-    right: 30rpx;
-  }
-  .rightPic image{
-    height: 30rpx;
-    width: 30rpx;
-  
-    
-  }
-  .shopname text{
-    font-size: 28rpx;
-  }
-  .controlMap{
-    width: 100%;
-    height: 3vh;
-    background: white;
-    font-size: 22rpx;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #8a8a8a;
-  }
-  .arrow image{
-    width: 6vw;
-    height: 4vh;
-  
-  }
-  .arrow{
-    padding-top: 10rpx;
-  }
-  
-  
+    height: 18vh; 
+}
+
+.right_bar{
+  width: 80vw;
+}
+.hd_swiper image {
+  width: 100%;
+  height: 100%;
+  border-radius: 10rpx;
+}
+.scrollclass{
+  width: 100%;
+  height: 63.5vh;
+  overflow: hidden;
+}
+
+.scroll-box .title{
+  padding: 26rpx 20rpx;
+  font-size: 24rpx;
+  text-align: left;
+  letter-spacing: 3rpx;
+}
+
+.scroll-box-product-box{
+  display: flex;
+  justify-content: space-between;
+  width: 94%;
+  height: 260rpx;
+  margin: auto;
+  padding: 20rpx 0;
+  /* border-bottom: 1rpx solid #E2E2E2; */
+}
+
+.scroll-box-product-box .product-img{
+  width: 240rpx;
+  height: 240rpx;
+  border-radius: 10rpx;
+}
+
+.scroll-box-product-box .product-info-box{
+  width: 70%;
+  position: relative;
+}
+
+.scroll-box-product-box .product-info-box .product-name{
+  font-weight: 600;
+  color: #333;
+  font-size: 30rpx;
+  letter-spacing: 3rpx;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.scroll-box-product-box .product-info-box .product-tag{
+  background-color: #f9f0e2;
+  font-size: 24rpx;
+  width: 20%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #c89e5f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15rpx;
+  margin-bottom: 10rpx;
+  letter-spacing: 3rpx;
+}
+.scroll-box-product-box .product-info-box .product-desc{
+  font-size: 20rpx;
+  color: #8d8d8d;
+  letter-spacing: 2rpx;
+}
+.scroll-box-product-box .product-price{
+  font-weight: 600;
+  color: #333;
+  font-size: 30rpx;
+  position: absolute;
+  bottom: 40rpx;
+}
+.scroll-box-product-box .product-info-box .product-button{
+  background: #FFB75E;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right #f9d087,#fbc270);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f9d087, #fbc270); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  width: 100rpx;
+  height: 40rpx;
+  position: absolute;
+  border-radius: 8rpx;
+  color:#fff;
+  font-size: 24rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  bottom: 40rpx;
+}
+
+.car{
+  width: 90vw;
+  height: 8vh;
+  position: absolute;
+  bottom: 0;
+  background-color: #fff;
+  bottom: 35rpx;
+  right: 5%;
+  left: 5%;
+  border-radius: 80rpx;
+  box-shadow: 0rpx 0rpx 20rpx rgba(0,0,0,0.3);
+  z-index: 1;
+}
+.shopBag image{
+  width: 6vh;
+  height: 6vh;
+}
+.shopBag{
+  margin-left: 50rpx;
+  margin-top: 15rpx;
+}
+.null{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.number{
+  width: 30rpx;
+  height: 30rpx;
+  background-color: #efbe5a;
+  position: absolute;
+  top: 0;
+  left:120rpx;
+  border-radius: 180rpx;
+  border: 2rpx solid #fff;
+}
+.number{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24rpx;
+  color: #fff;
+}
+.total-price{
+  position: absolute;
+  right: 250rpx;
+  top: 3vh;
+  font-size: 46rpx;
+  transform: translateY(-50%);
+}
+.sure-button{
+  position: absolute;
+  width: 30%;
+  height: 100%;
+  background: #FFB75E;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right #f9d087,#fbc270);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f9d087, #fbc270);
+  right: 0;
+  top: -15rpx;
+  border-radius: 0 80rpx 80rpx 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40rpx;
+  color: #fff;
+}
+
